2013-01-24 Riccardo Mottola <rm@gnu.org>

	* main.m
	Fix warning due to missing import.

2012-04-03 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	Fix GNU/HURD includes.

2012-03-28 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	
	* TerminalView.m
	Fix warnings on 64Bit systems, cast from integer to pointer of different size

2012-03-27 Riccardo Mottola <rm@gnu.org>

	* TerminalView.m
	Fix OpenBSD includes.

2012-03-26 Riccardo Mottola <rm@gnu.org>

	* PreferencesWindowController.m
	Use NSUInteger as Index.

2012-03-26 Riccardo Mottola <rm@gnu.org>

	* PreferencesWindowController.[h,m]
	Clean up imports

2012-03-07 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile:
	Use TOOL_LIBS instead of LDFLAGS to link the framework library.

2011-12-04 Riccardo Mottola <rm@gnu.org>

	* TerminalParser_Linux.m
	* TerminalViewPrefs.h
	* TerminalViewPrefs.m
	Add Alt is not Meta option, to enable the usage of AltGr, when left Alt is command.

2011-05-07 Riccardo Mottola <rm@gnu.org>

	* Terminal.tiff
	* cursor_filled.tiff
	* cursor_inverted.tiff
	* cursor_line.tiff
	* cursor_stroked.tiff
	Set resolution to 72 dpi screen.

2010-12-14 Riccardo Mottola

	* main.m: hide ordered out quit panel from windows menu

2010-05-14 04:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* TerminalView.m: Correct sign issues with some pointer casts.

2010-05-14 Riccardo Mottola <rmottola@users.sf.net>

	* ServicesPrefs.m:
	Added missing import
	* TerminalView.m: initialize to avoid warnings.

2010-03-26 Riccardo Mottola <rmottola@users.sf.net>

	* ServicesPrefs.m,
	TerminalParser_Linux.m,
	TerminalParser_LinuxPrefs.m,
	TerminalViewPrefs.m: updated imports

2010-01-16 Riccardo Mottola <rmottola@users.sf.net>

	* Italian.lproj/Localizable.strings,
	GNUMakefile: added italian translation, revised version
	of the draft provided by Guido Agostini

2009-12-24 Riccardo Mottola <rmottola@users.sf.net>

	* PreferencesWindowController.m : correct invocation signature
